# zip_static_handler_dev_server

./: Cargo.toml  README.md  serve-linux-x64  serve-mac-arm64
src/: adapter.rs  handler.rs  http.rs  main.rs  path.rs  types.rs
www/: background.avif  index.html
