[package]
name = "serve"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.colored]
version = "2.1"
features = []

[dependencies.lazy_static]
version = "1.4"
default-features = false
features = []

[dependencies.crc32fast]
version = "1.4"
default-features = false
features = ["std"]

[dependencies.hyper]
version = "1.3"
default-features = false
features = []

[dependencies.hyper-util]
version = "0.1"
default-features = false
features = ["tokio", "server", "http1", "http2"]

[dependencies.hyper-rustls]
version = "0.27"
default-features = false
features = ["http2", "ring"]

[dependencies.http-body-util]
version = "0.1"
default-features = false
features = []

[dependencies.ring]
version = "0.17"
default-features = false
features = ["std"]

[dependencies.rcgen]
version = "0.13"
default-features = false
features = ["crypto", "ring", "pem"]

[dependencies.tokio]
version = "1.37"
default-features = false
features = ["full", "io-util"]

[dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["ring"]
