[package]
name = "serve"
version = "0.6.1"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.colored]
version = "3.0"
features = []

[dependencies.crc32fast]
version = "1.4"
default-features = false
features = ["std"]

[dependencies.hyper]
version = "1.6"
default-features = false
features = []

[dependencies.hyper-util]
version = "0.1"
default-features = false
features = ["tokio", "server", "http1", "http2"]

[dependencies.http-body-util]
version = "0.1"
default-features = false
features = []

[dependencies.rcgen]
version = "0.14"
default-features = false
features = ["crypto", "ring", "pem"]

[dependencies.tokio]
version = "1.46"
default-features = false
features = ["full", "io-util"]

[dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[profile.release]
lto = "fat"
codegen-units = 1
